fixed hamburger menu z-index

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -118,6 +118,7 @@
       position: absolute;
       width: 100vw;
       transition: all 1s;
+      z-index: 10;
       ul
       {
         display: grid;
